fine tuning spacing issues on ticket tracker

--- a/web/themes/contrib/zircon/sass/page.scss
+++ b/web/themes/contrib/zircon/sass/page.scss
@@ -141,8 +141,8 @@
     }
 
     div#block-zircon-content p.button-par {
-        margin-top: 50px;
-        margin-bottom: 50px;
+        margin-top: 0px;
+        margin-bottom: 29px;
     }
 
     .views-field-field-sr-type {
